# address-monitor

./: .clang-format  .gitignore  README.md  address-monitor_4.orig.tar.gz.delta  address-monitor_4.orig.tar.gz.id  config.h.in  list.h  main.c  make-deb.sh  meson.build  meson_options.txt
debian/: address-monitor.default  address-monitor.service  changelog  control  copyright  gbp.conf
packaging/: address-monitor.service
src/: ansi-colors.h  list.h  main.c  main.h  meson.build  utils.c  utils.h
